2008-10-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Handle 'this' correctly in GetOperandType 
	rock. Add new rock to check for an operand loading the constant zero.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Add GetOperandType rock to be able, quickly,
	to determine on which type an instruction works.

2008-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs: Add IsOverride rock.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionRocks.cs: Simplify some rocks (Is*) by using the new
	OpCodeBitmask helper class.

2008-08-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs: Remove HasAttribute
	* CustomAttributeRocks.cs: Add HasAttribute extension method on 
	ICustomAttributeProvider
	* FieldRocks.cs: Remove HasAttribute
	* MethodRocks.cs: Remove HasAttribute
	* TypeRocks.cs: Remove HasAttribute

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Fix parameter type comparison wrt generics.

2008-08-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* InstructionRocks.cs: Add an overload to TraceBack that accept an
	offset. This makes it easier to find all parameters to a method call.

2008-07-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Exit early from LoadDebuggingSymbols if the symbols
	are already loaded (i.e. the reader was created). This avoid an 
	exception for the wizard since this is called each time a new analysis
	is performed (without the need to reload the assemblies).

2008-07-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* ModuleRocks.cs: Look up the Mono.Cecil.Mdb.dll in the GAC if can't be
	found in the current folder.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Added IsStatic for static types (2.0+). Fixed 
	IsVisible to work when resolving is required (or not possible).

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com> 
